<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GameOVer">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:src="@drawable/gameover"></androidx.appcompat.widget.AppCompatImageView>

        <!--CARD VIEW-->
        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="#E0D796"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:weightSum="2">

                <!--POINTS-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/flappybird_font"
                            android:text="@string/PointsTXT"
                            android:textColor="#FF7133"
                            android:textSize="30sp"></TextView>

                        <TextView
                            android:id="@+id/Points"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5sp"
                            android:fontFamily="@font/flappybird_font"
                            android:text="@string/Points"
                            android:textColor="#000"
                            android:textSize="50sp"></TextView>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <!--BEST SCORE-->
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/flappybird_font"
                            android:text="@string/BestScoreTXT"
                            android:textColor="#FF7133"
                            android:textSize="30sp"></TextView>

                        <TextView
                            android:id="@+id/BestScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/flappybird_font"
                            android:text="@string/BestScore"
                            android:textColor="#000"
                            android:textSize="50sp"></TextView>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.cardview.widget.CardView>

        <!--PLAY BUTTON-->
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/PlayAgain"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/play"></androidx.appcompat.widget.AppCompatImageView>

        <!--EXIT BUTTON-->
        <Button
            android:id="@+id/Btn_Exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="#FF3346"
            android:fontFamily="@font/flappybird_font"
            android:text="@string/Btn_Exit"
            android:textColor="#FFFF"
            android:textSize="35sp"></Button>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>